--- a/DOM PROJECT/syle.css
+++ b/DOM PROJECT/syle.css
@@ -3,18 +3,27 @@ body
     margin: 0;
     padding: 0;
     box-sizing: border-box; 
-    background-color: lightblue;
+    
+
+}
+
+#main-heading
+{
+     
+    font-size: 25px;
 }
 
 .container
 {
     height: 400px;
-    width: 500px;
+    width: 300px;
     background-color: white;
    
     padding-left: 40%;
     padding-right: 40%;
     border-radius: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .list-items
